[project]
name = "text-to-diagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.2",
    "plantuml>=0.3.0",
    "requests>=2.32.4",
    "streamlit>=1.50.0",
    "youtube-search>=2.1.2",
]
