[project]
name = "text-to-diagram"
version = "0.3.0"
description = "Turn natural-language diagram ideas into PlantUML using a Groq-powered Python agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.2",
    "plantuml>=0.3.0",
    "requests>=2.32.4",
    "streamlit>=1.50.0",
    "youtube-search>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[project.scripts]
text-to-diagram-chat = "chatbot:main"
text-to-diagram-ui = "ai_agent.streamlit_launcher:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["chatbot", "chatkey", "main"]

[tool.setuptools.packages.find]
include = ["ai_agent", "ai_agent.*"]
